Make JUnit 4 tests run